@@ -1,4 +1,11 @@
 2007-12-11  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am 
+	(stamps/clone-ecj.stamp): Added -n to test.
+	(stamps/clone.stamp): Likewise.
+	* Makefile.in: Regenerate.
+
+2007-12-11  Lillian Angel  <langel@redhat.com>
 	
 	* Makefile.am (stamps/clone-ecj.stamp): Fixed typo.
 	* Makefile.in: Regenerate.
